--- a/package.json
+++ b/package.json
@@ -1,26 +1,14 @@
 {
   "name": "stamp-discord",
   "version": "1.0.0",
-  "description": "Discord utility for generating UNIX timestamps",
-  "main": "index.js",
+  "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "func start",
+    "test": "echo \"No tests yet...\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ColorWizardd/stamp-discord.git"
-  },
-  "keywords": [
-    "discord",
-    "timestamp"
-  ],
-  "author": "ColorWizardd",
-  "license": "SEE LICENSE IN README.md",
-  "bugs": {
-    "url": "https://github.com/ColorWizardd/stamp-discord/issues"
-  },
-  "homepage": "https://github.com/ColorWizardd/stamp-discord#readme",
   "dependencies": {
-    "discord.js": "^14.22.1"
-  }
+    "@azure/functions": "^4.0.0",
+    "slash-create": "^6.6.1"
+  },
+  "main": "src/{index.js,functions/*.js}"
 }
