--- a/package.json
+++ b/package.json
@@ -10,5 +10,5 @@
     "@azure/functions": "^4.7.2",
     "slash-create": "^6.6.1"
   },
-  "main": "src/{index.js,functions/*.js}"
+  "main": "src/{index.mjs,functions/*.mjs}"
 }
