--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@azure/functions": "^4.7.2",
-    "slash-create": "^6.6.1"
+    "slash-create": "^6.6.1",
+    "tweetnacl": "^1.0.3"
   },
   "main": "src/{index.js,functions/*.js}"
 }
