Fixed package.json Migrated ping-test to separate file

--- a/package.json
+++ b/package.json
@@ -12,5 +12,5 @@
     "slash-create": "^6.6.1",
     "tweetnacl": "^1.0.3"
   },
-  "main": "src/{index.js,functions/*.js}"
+  "main": "src/functions/*.js"
 }
