--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {
+  "overrides": {
     "@azure/functions": "^4.7.2",
+    "applicationinsights": "^3.9.0",
     "slash-create": "^6.6.1",
     "tweetnacl": "^1.0.3"
   },
